--- a/index.html
+++ b/index.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Chart.js for in-page charts -->
+  <!-- Chart.js (only if you render a chart on this page) -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <!-- Essential meta tags -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <title>Workout Plan</title>
 
-  <!-- Your main stylesheet -->
+  <!-- Main stylesheet -->
   <link rel="stylesheet" href="style.css" />
 
-  <!-- PWA icons (all stored under /icons) -->
-  <link rel="icon" type="image/png"   sizes="96x96"   href="/icons/favicon-96x96.png" />
-  <link rel="icon" type="image/svg+xml"            href="/icons/favicon.svg" />
-  <link rel="shortcut icon"                        href="/icons/favicon.ico" />
-  <link rel="apple-touch-icon"    sizes="180x180"  href="/icons/apple-touch-icon.png" />
-  <link rel="icon" type="image/png"   sizes="192x192"  href="/icons/icon-192.png" />
-  <link rel="icon" type="image/png"   sizes="512x512"  href="/icons/icon-512.png" />
+  <!-- PWA icons (in /icons/) -->
+  <link rel="icon" type="image/png" sizes="96x96"   href="/icons/favicon-96x96.png" />
+  <link rel="icon" type="image/svg+xml"             href="/icons/favicon.svg" />
+  <link rel="shortcut icon"                         href="/icons/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180"       href="/icons/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="192x192"  href="/icons/icon-192.png" />
+  <link rel="icon" type="image/png" sizes="512x512"  href="/icons/icon-512.png" />
 
-  <!-- PWA manifest -->
+  <!-- Web App Manifest -->
   <link rel="manifest" href="/manifest.json" />
 
-  <!-- Theme colors -->
+  <!-- Theme color -->
   <meta name="theme-color" content="#00ffcc" />
 
-  <!-- iOS Safari fullscreen -->
+  <!-- iOS fullscreen -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="Workout Tracker" />
 </head>
 <body>
 
-  <!-- 🌐 Sidebar Navigation -->
+  <!-- Sidebar Navigation -->
   <div id="sidebar" class="sidebar">
     <h2>📋 Menu</h2>
     <a href="index.html">🏋️ Workout</a>
@@ -41,23 +42,24 @@
   </div>
   <button id="sidebarToggle" onclick="toggleSidebar()">☰</button>
 
-  <!-- 🌙 Dark Mode + Scroll Button -->
+  <!-- Theme toggle + Scroll to top -->
   <button id="themeToggle" onclick="toggleTheme()">🌙</button>
   <button id="scrollTopBtn">↑</button>
 
+  <!-- Top bar: bodyweight + edit -->
   <div class="top-bar">
     <div id="bodyweightDisplayTop">Bodyweight: —</div>
     <button id="editToggleBtn" onclick="toggleEdit()">✏️ Edit</button>
   </div>
 
-  <!-- ✨ Ambient Blobs -->
+  <!-- Ambient background blobs -->
   <div class="ambient-bg">
     <div class="blob blob1"></div>
     <div class="blob blob2"></div>
     <div class="blob blob3"></div>
   </div>
 
-  <!-- 💪 Workout Content -->
+  <!-- Main workout container -->
   <div class="container">
     <h1>Workout Split</h1>
 
@@ -65,41 +67,36 @@
 
     <!-- Day 1 -->
     <div class="workout-day">
-      <h2 onclick="toggleDay(this.parentElement)">Day 1</h2>
+      <h2>Day 1</h2>
       <ul>
         <li>
-          <input type="checkbox" onchange="updateProgress()" />
+          <input type="checkbox" />
           <span class="exercise-name" contenteditable="false">Incline Press – 4x4-6</span>
-          <input type="number" class="weight-input hidden" placeholder="Weight (kg)"
-                 oninput="debounceUpdateWeight(this)" />
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
           <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
         </li>
         <li>
-          <input type="checkbox" onchange="updateProgress()" />
+          <input type="checkbox" />
           <span class="exercise-name" contenteditable="false">Dumbbell Lateral Raise – 3x10-15</span>
-          <input type="number" class="weight-input hidden" placeholder="Weight (kg)"
-                 oninput="debounceUpdateWeight(this)" />
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
           <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
         </li>
         <li>
-          <input type="checkbox" onchange="updateProgress()" />
+          <input type="checkbox" />
           <span class="exercise-name" contenteditable="false">Weighted Dips – 4x4-6</span>
-          <input type="number" class="weight-input hidden" placeholder="Weight (kg)"
-                 oninput="debounceUpdateWeight(this)" />
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
           <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
         </li>
         <li>
-          <input type="checkbox" onchange="updateProgress()" />
+          <input type="checkbox" />
           <span class="exercise-name" contenteditable="false">SkullCrushers – 3x8-10</span>
-          <input type="number" class="weight-input hidden" placeholder="Weight (kg)"
-                 oninput="debounceUpdateWeight(this)" />
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
           <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
         </li>
         <li>
-          <input type="checkbox" onchange="updateProgress()" />
+          <input type="checkbox" />
           <span class="exercise-name" contenteditable="false">Tricep Extensions – 3x8-10</span>
-          <input type="number" class="weight-input hidden" placeholder="Weight (kg)"
-                 oninput="debounceUpdateWeight(this)" />
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
           <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
         </li>
       </ul>
@@ -107,44 +104,130 @@
 
     <!-- Day 2 -->
     <div class="workout-day">
-      <h2 onclick="toggleDay(this.parentElement)">Day 2</h2>
+      <h2>Day 2</h2>
       <ul>
         <li>
-          <input type="checkbox" onchange="updateProgress()" />
+          <input type="checkbox" />
           <span class="exercise-name" contenteditable="false">Chest-Supported Dumbbell Rows – 3x4-6</span>
-          <input type="number" class="weight-input hidden" placeholder="Weight (kg)"
-                 oninput="debounceUpdateWeight(this)" />
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
           <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
         </li>
-        <!-- …other Day 2 items… -->
+        <li>
+          <input type="checkbox" />
+          <span class="exercise-name" contenteditable="false">Isolateral Dumbbell Rows – 4x6-8</span>
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
+          <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
+        </li>
+        <li>
+          <input type="checkbox" />
+          <span class="exercise-name" contenteditable="false">Incline Curls – 3x8-10</span>
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
+          <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
+        </li>
+        <li>
+          <input type="checkbox" />
+          <span class="exercise-name" contenteditable="false">Barbell Curls – 3x8-12</span>
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
+          <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
+        </li>
+        <li>
+          <input type="checkbox" />
+          <span class="exercise-name" contenteditable="false">Hammer Curls – 3x8-12</span>
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
+          <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
+        </li>
       </ul>
     </div>
 
     <!-- Day 3 -->
     <div class="workout-day">
-      <h2 onclick="toggleDay(this.parentElement)">Day 3</h2>
+      <h2>Day 3</h2>
       <ul>
-        <!-- …Day 3 items… -->
+        <li>
+          <input type="checkbox" />
+          <span class="exercise-name" contenteditable="false">Back Squat – 4x4</span>
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
+          <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
+        </li>
+        <li>
+          <input type="checkbox" />
+          <span class="exercise-name" contenteditable="false">Romanian Deadlift – 4x6</span>
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
+          <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
+        </li>
+        <li>
+          <input type="checkbox" />
+          <span class="exercise-name" contenteditable="false">Walking Lunges – 3x8</span>
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
+          <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
+        </li>
+        <li>
+          <input type="checkbox" />
+          <span class="exercise-name" contenteditable="false">Calf Raises – 3x6-8</span>
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
+          <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
+        </li>
       </ul>
     </div>
 
     <!-- Day 4 -->
     <div class="workout-day">
-      <h2 onclick="toggleDay(this.parentElement)">Day 4</h2>
+      <h2>Day 4</h2>
       <ul>
-        <!-- …Day 4 items… -->
+        <li>
+          <input type="checkbox" />
+          <span class="exercise-name" contenteditable="false">Standing Military Press – 4x4-6</span>
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
+          <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
+        </li>
+        <li>
+          <input type="checkbox" />
+          <span class="exercise-name" contenteditable="false">Seated Dumbbell Press – 3x4-6</span>
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
+          <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
+        </li>
+        <li>
+          <input type="checkbox" />
+          <span class="exercise-name" contenteditable="false">Secret Back Exercise – 4x6-8</span>
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
+          <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
+        </li>
+        <li>
+          <input type="checkbox" />
+          <span class="exercise-name" contenteditable="false">Close-Grip Bench Press – 2x8-10</span>
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
+          <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
+        </li>
+        <li>
+          <input type="checkbox" />
+          <span class="exercise-name" contenteditable="false">Lateral Raises (Heavy Drop Set) – 3x12-15</span>
+          <input type="number" class="weight-input hidden" placeholder="Weight (kg)" />
+          <div class="weight-display">Current weight: <span class="weight-value">—</span></div>
+        </li>
       </ul>
     </div>
-  </div>
 
-  <!-- Your main script -->
+  </div><!-- /.container -->
+
+  <!-- Main application logic -->
   <script src="script.js"></script>
 
-  <!-- Register Service Worker for offline support -->
+  <!-- Hook up Day-toggle clicks -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      document.querySelectorAll('.workout-day h2').forEach(h2 => {
+        h2.addEventListener('click', () => {
+          toggleDay(h2.parentElement);
+        });
+      });
+    });
+  </script>
+
+  <!-- Service worker registration -->
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/sw.js')
-        .catch(err => console.error('Service Worker registration failed:', err));
+        .catch(err => console.error('SW registration failed:', err));
     }
   </script>
 </body>
